# TyMinder

./: .gitignore  Gruntfile.js  README-zh.md  README.md  bower.json  index.html  logo.icns  package-lock.json  package.json
.github/workflows/: release.yml
docs/: file_structure.md  km_sample.km
docs/xmind_sample/: content.json  metadata.json
l10n/: de.js  en.js  es.js  fr.js  it.js  zh_CN.js  zh_TW.js
less/: _navigator.less  aiRewriteOverlay.less  contextMenu.less  editor.less
less/topTab/: topTab.less  windowControls.less
less/topTab/ai/: aiChatPanel.less  aiTab.less
less/topTab/appearance/: colorPanel.less  fontOperator.less  styleOperator.less
less/topTab/file/: fileOperation.less
less/topTab/idea/: hyperconnection.less
less/topTab/view/: select.less
src/: editor.js  lang.js  minder.js  native.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: ai.rs  backup.rs  config.rs  crypto.rs  file.rs  lib.rs  main.rs  window.rs
src/protocol/: freemind.js  index.js  json.js  manager.js  markdown.js  mindmanager.js  plain.js  png.js  svg.js  xmind.js
src/runtime/: jumping.js
src/tool/: xml2json.js
ui/: templates.js
ui/dialog/aiExport/: aiExport.ctrl.js  aiExport.tpl.html
ui/dialog/aiGenerate/: aiGenerate.ctrl.js  aiGenerate.tpl.html
ui/dialog/exportMarkdown/: exportMarkdown.ctrl.js  (+1 more)
ui/filter/: lang.filter.js
ui/service/: ai.service.js  backup.service.js  config.service.js  document.service.js  native.service.js  revokeDialog.service.js  valueTransfer.service.js
(+32 files in other folders)
