[package]
name = "tyminder"
version = "0.2.1"
description = "A powerful, lightweight, and cross-platform mind mapping desktop application."
authors = ["ACTom <i@actom.me>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tyminder_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sys-locale = "0.3.2"
base64 = "0.21"
chrono = "0.4"
# AI 功能依赖
reqwest = { version = "0.11", features = ["json", "stream", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
aes-gcm = "0.10"
rand = "0.8"
hex = "0.4"
